# frik

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: tests.yml
frik/: __init__.py  __main__.py  cli.py
frik/api/: app.py  models.py
frik/sources/: bls.py  h1b.py  postings.py
tests/: conftest.py  test_cli.py
tests/api/: test_app.py
tests/sources/: test_bls.py  test_h1b.py
