[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frik"
version = "0.1.0"
description = "Fair Remuneration Intelligence Kit — multi-source salary intelligence for compensation research and California-compliant pay range generation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "requests>=2.31",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-mock>=3",
]

[project.scripts]
frik = "frik.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["frik*"]
