[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frik"
version = "0.1.0"
description = "Fair Remuneration Intelligence Kit — multi-source salary intelligence for compensation research and California-compliant pay range generation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "requests>=2.31",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "responses>=0.25",
    "httpx2>=0.28",      # FastAPI TestClient transport (starlette >=0.46 prefers httpx2)
    "ruff>=0.4",
    "fastapi>=0.111",    # needed to import frik.api in tests
    "uvicorn[standard]>=0.29",
]

[project.scripts]
frik = "frik.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["frik*"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=frik",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=70",
    "-v",
]

[tool.coverage.run]
branch = true
source = ["frik"]
omit = ["frik/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "def __repr__",
]

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long — ruff format handles this
]
